--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <center>
 <img src="https://cdn.discordapp.com/emojis/831365713129373716.png?v=1" alt title >
 <h1>Welcome to Basado Cafe!</h1>
-<p>Site created mack#2478</p>
+<p>Site created by mack#2478</p>
 <h3>A Big Thank you to..</h3>
 <p>Fat soldier#1411</p>
 <p>☠ Temo ☠#0123</p>
