--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
 <h3>A Big Thank you to..</h3>
 <p>Fat soldier#1411</p>
 <p>☠ Temo ☠#0123</p>
+  <p>ribet#1111</p>
 <p>and... YOU FOR VISITING BASADO CAFE!</p>
