--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-
+<meta property="og:type" content="basadocafe.tk">
+<meta property="og:title" content="Basado Cafe" />
+<meta property="og:description" content="Created by mack#2478" />
+<meta property="og:url" content=https://basadocafe.tk" />
 <title>Basado Cafe</title>
 <center>
 <img src="https://cdn.discordapp.com/emojis/831365713129373716.png?v=1" alt title >
