--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<meta property="og:type" content="basadocafe.tk">
-<meta property="og:title" content="Basado Cafe" />
-<meta property="og:description" content="Created by mack#2478" />
-<meta property="og:url" content=https://basadocafe.tk" />
+    <meta content="Basado Cafe" property="og:title" />
+    <meta content="site created by mack#2478" property="og:description" />
+    <meta content="https://basadocafe.tk" property="og:url" />
+    <meta content="https://cdn.discordapp.com/emojis/831365713129373716.png?v=1" property="og:image" />
+    <meta content="#000000" data-react-helmet="true" name="theme-color" />
 <title>Basado Cafe</title>
 <center>
 <img src="https://cdn.discordapp.com/emojis/831365713129373716.png?v=1" alt title >
